<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:visible="false"
        android:id="@+id/button_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom"
        android:onClick="editListener"
        android:title="@string/edit" />

    <item
        android:visible="false"
        android:id="@+id/button_done"
        android:icon="@drawable/ic_done"
        app:showAsAction="ifRoom"
        android:onClick="doneListener"
        android:title="@string/done" />

    <item
        android:visible="false"
        android:id="@+id/button_cancel"
        android:icon="@drawable/ic_cancel"
        app:showAsAction="ifRoom"
        android:onClick="cancelListener"
        android:title="@string/cancel" />

</menu>