<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".views.fragments.InfoFragment">

    <TextView
        android:id="@+id/textView_info_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_info_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView_info_my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_info_developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_info_developer" />

    <TextView
        android:id="@+id/textView_info_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/development_start_date"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_info_hours"
        app:layout_constraintStart_toStartOf="@+id/textView_info_developer"
        app:layout_constraintTop_toBottomOf="@+id/textView_info_developer" />

    <TextView
        android:id="@+id/textView_info_start_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/development_start_date_value"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_info_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_info_start" />

    <TextView
        android:id="@+id/textView_info_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/development_last_updated"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_info_version"
        app:layout_constraintStart_toStartOf="@+id/textView_info_developer"
        app:layout_constraintTop_toBottomOf="@+id/textView_info_start" />

    <TextView
        android:id="@+id/textView_info_hours_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/development_last_updated_value"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_info_hours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_info_hours" />

    <TextView
        android:id="@+id/textView_info_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/version"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_info_developer"
        app:layout_constraintTop_toBottomOf="@+id/textView_info_hours" />

    <TextView
        android:id="@+id/textView_info_version_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_value"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_info_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_info_version" />

</androidx.constraintlayout.widget.ConstraintLayout>