<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="16dp">

	<TextView
		android:id="@+id/textView_edit_category_preview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/category_preview"
		android:textColor="@android:color/black"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/textView_edit_category_preview_value"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:padding="6dp"
		android:text="@string/event"
		android:textColor="@android:color/black"
		android:textSize="16sp"
		app:layout_constraintBottom_toBottomOf="@+id/textView_edit_category_preview"
		app:layout_constraintStart_toEndOf="@+id/textView_edit_category_preview"
		app:layout_constraintTop_toTopOf="@+id/textView_edit_category_preview" />

	<TextView
		android:id="@+id/textView_edit_category_name"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:text="@string/name"
		android:textColor="@android:color/black"
		app:layout_constraintBottom_toBottomOf="@+id/editText_edit_category_name"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/editText_edit_category_name" />

	<EditText
		android:id="@+id/editText_edit_category_name"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="8dp"
		android:inputType="textShortMessage"
		android:maxLength="25"
		android:maxLines="1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.266"
		app:layout_constraintStart_toEndOf="@+id/textView_edit_category_name"
		app:layout_constraintTop_toBottomOf="@+id/textView_edit_category_preview_value" />

	<TextView
		android:id="@+id/textView_edit_category_fill_color"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:text="@string/fill_color"
		android:textColor="@android:color/black"
		app:layout_constraintStart_toStartOf="@+id/textView_edit_category_name"
		app:layout_constraintTop_toBottomOf="@+id/editText_edit_category_name" />

	<View
		android:id="@+id/view_edit_category_fill_color"
		android:layout_width="30dp"
		android:layout_height="30dp"
		android:layout_marginStart="8dp"
		android:background="@drawable/round_button"
		app:layout_constraintBottom_toBottomOf="@+id/textView_edit_category_fill_color"
		app:layout_constraintStart_toEndOf="@+id/textView_edit_category_fill_color"
		app:layout_constraintTop_toTopOf="@+id/textView_edit_category_fill_color" />

	<TextView
		android:id="@+id/textView_edit_category_text_color"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:text="@string/text_color"
		android:textColor="@android:color/black"
		app:layout_constraintBaseline_toBaselineOf="@+id/textView_edit_category_fill_color"
		app:layout_constraintEnd_toStartOf="@+id/view_edit_category_text_color" />

	<View
		android:id="@+id/view_edit_category_text_color"
		android:layout_width="30dp"
		android:layout_height="30dp"
		android:layout_marginEnd="8dp"
		android:background="@drawable/round_button"
		app:layout_constraintBottom_toBottomOf="@+id/textView_edit_category_text_color"
		app:layout_constraintEnd_toEndOf="@+id/editText_edit_category_name"
		app:layout_constraintTop_toTopOf="@+id/textView_edit_category_text_color" />

	<View
		android:id="@+id/button_edit_category_reverse_colors"
		android:layout_width="36dp"
		android:layout_height="36dp"
		android:background="@drawable/ic_reverse"
		app:layout_constraintBottom_toBottomOf="@+id/textView_edit_category_fill_color"
		app:layout_constraintEnd_toStartOf="@+id/textView_edit_category_text_color"
		app:layout_constraintStart_toEndOf="@+id/view_edit_category_fill_color"
		app:layout_constraintTop_toTopOf="@+id/textView_edit_category_fill_color" />


</androidx.constraintlayout.widget.ConstraintLayout>