<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tView_add_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/name"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eText_add_event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textShortMessage"
        android:maxLength="25"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/tView_add_event_name"
        app:layout_constraintStart_toStartOf="@+id/tView_add_event_name"
        app:layout_constraintTop_toBottomOf="@+id/tView_add_event_name" />

    <TextView
        android:id="@+id/tView_add_event_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_time"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eText_add_event_name" />

    <TextView
        android:id="@+id/tView_add_event_start_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="12:00"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tView_add_event_start"
        app:layout_constraintStart_toEndOf="@+id/tView_add_event_start"
        app:layout_constraintTop_toTopOf="@+id/tView_add_event_start" />

    <TextView
        android:id="@+id/tView_add_event_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/end_time"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tView_add_event_start" />

    <TextView
        android:id="@+id/tView_add_event_end_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12:00"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tView_add_event_end"
        app:layout_constraintStart_toStartOf="@+id/tView_add_event_start_value"
        app:layout_constraintTop_toTopOf="@+id/tView_add_event_end" />

</android.support.constraint.ConstraintLayout>